src/.antlr/QuizzParser.java
// Generated from /home/hugo/Desktop/Faculdade/Segundo Ano/Segundo Semestre/Compiladores/Projeto/quiz-comp-06/src/Quizz.g4 by ANTLR 4.8
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class QuizzParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		BreakOperator=46, VarType=47, ID=48, String=49, Int=50, Double=51, MethodTypes=52, 
		WS=53, LINE_COMMENT=54, FULL_COMMENT=55, NEWLINE=56;
	public static final int
		RULE_program = 0, RULE_expr = 1, RULE_statement = 2, RULE_assignment = 3, 
		RULE_quiz = 4, RULE_question = 5, RULE_text = 6, RULE_number = 7, RULE_table = 8, 
		RULE_bquest = 9, RULE_value = 10, RULE_type = 11, RULE_attribute = 12, 
		RULE_shuffle = 13, RULE_input = 14, RULE_output = 15, RULE_cycle = 16, 
		RULE_condition = 17, RULE_breakOperation = 18, RULE_operation = 19, RULE_logic = 20, 
		RULE_methods = 21;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "expr", "statement", "assignment", "quiz", "question", "text", 
			"number", "table", "bquest", "value", "type", "attribute", "shuffle", 
			"input", "output", "cycle", "condition", "breakOperation", "operation", 
			"logic", "methods"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'='", "'Quiz('", "','", "')'", "'Question('", "'Text('", "'Number('", 
			"'{'", "'}'", "'import('", "'MultipleChoice('", "'Matching('", "'ShortAnswer('", 
			"'NumericAnswer('", "'Essay('", "'Shuffle'", "'['", "']'", "'input('", 
			"'output('", "'for'", "'from'", "'to'", "'do'", "'end'", "'in'", "'if'", 
			"'('", "'+'", "'-'", "'^'", "'*'", "'/'", "'%'", "'//'", "'not'", "'and'", 
			"'or'", "'=='", "'!='", "'<'", "'>'", "'<='", "'>='", "'contains'", "'break'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, "BreakOperator", 
			"VarType", "ID", "String", "Int", "Double", "MethodTypes", "WS", "LINE_COMMENT", 
			"FULL_COMMENT", "NEWLINE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Quizz.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public QuizzParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(QuizzParser.EOF, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(47);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__1) | (1L << T__4) | (1L << T__5) | (1L << T__6) | (1L << T__7) | (1L << T__9) | (1L << T__10) | (1L << T__11) | (1L << T__12) | (1L << T__13) | (1L << T__14) | (1L << T__15) | (1L << T__18) | (1L << T__19) | (1L << T__20) | (1L << T__26) | (1L << T__27) | (1L << T__28) | (1L << T__29) | (1L << BreakOperator) | (1L << VarType) | (1L << ID) | (1L << String) | (1L << Int) | (1L << Double))) != 0)) {
				{
				{
				setState(44);
				statement();
				}
				}
				setState(49);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(50);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprContext extends ParserRuleContext {
		public VType tp;
		public String var = null;
		public MethodsContext methods;
		public OperationContext operation;
		public AttributeContext attribute;
		public MethodsContext methods() {
			return getRuleContext(MethodsContext.class,0);
		}
		public OperationContext operation() {
			return getRuleContext(OperationContext.class,0);
		}
		public AttributeContext attribute() {
			return getRuleContext(AttributeContext.class,0);
		}
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
	}

	public final ExprContext expr() throws RecognitionException {
		ExprContext _localctx = new ExprContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_expr);
		try {
			setState(61);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(52);
				((ExprContext)_localctx).methods = methods(0);
				((ExprContext)_localctx).tp =  ((ExprContext)_localctx).methods.tp;
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(55);
				((ExprContext)_localctx).operation = operation(0);
				((ExprContext)_localctx).tp =  ((ExprContext)_localctx).operation.tp;
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(58);
				((ExprContext)_localctx).attribute = attribute();
				((ExprContext)_localctx).tp =  ((ExprContext)_localctx).attribute.tp;
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public CycleContext cycle() {
			return getRuleContext(CycleContext.class,0);
		}
		public ConditionContext condition() {
			return getRuleContext(ConditionContext.class,0);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public OutputContext output() {
			return getRuleContext(OutputContext.class,0);
		}
		public BreakOperationContext breakOperation() {
			return getRuleContext(BreakOperationContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_statement);
		try {
			setState(69);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(63);
				assignment();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(64);
				cycle();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(65);
				condition();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(66);
				expr();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(67);
				output();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(68);
				breakOperation();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignmentContext extends ParserRuleContext {
		public AssignmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignment; }
	 
		public AssignmentContext() { }
		public void copyFrom(AssignmentContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class DeclAssignContext extends AssignmentContext {
		public TerminalNode VarType() { return getToken(QuizzParser.VarType, 0); }
		public TerminalNode ID() { return getToken(QuizzParser.ID, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public DeclAssignContext(AssignmentContext ctx) { copyFrom(ctx); }
	}
	public static class AssignContext extends AssignmentContext {
		public TerminalNode ID() { return getToken(QuizzParser.ID, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public AssignContext(AssignmentContext ctx) { copyFrom(ctx); }
	}
	public static class DeclContext extends AssignmentContext {
		public TerminalNode VarType() { return getToken(QuizzParser.VarType, 0); }
		public TerminalNode ID() { return getToken(QuizzParser.ID, 0); }
		public DeclContext(AssignmentContext ctx) { copyFrom(ctx); }
	}

	public final AssignmentContext assignment() throws RecognitionException {
		AssignmentContext _localctx = new AssignmentContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_assignment);
		try {
			setState(80);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				_localctx = new DeclAssignContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(71);
				match(VarType);
				setState(72);
				match(ID);
				setState(73);
				match(T__0);
				setState(74);
				expr();
				}
				break;
			case 2:
				_localctx = new AssignContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(75);
				match(ID);
				setState(76);
				match(T__0);
				setState(77);
				expr();
				}
				break;
			case 3:
				_localctx = new DeclContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(78);
				match(VarType);
				setState(79);
				match(ID);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class QuizContext extends ParserRuleContext {
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public QuizContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_quiz; }
	}

	public final QuizContext quiz() throws RecognitionException {
		QuizContext _localctx = new QuizContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_quiz);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(82);
			match(T__1);
			setState(83);
			expr();
			setState(86);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__2) {
				{
				setState(84);
				match(T__2);
				setState(85);
				expr();
				}
			}

			setState(88);
			match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class QuestionContext extends ParserRuleContext {
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public QuestionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_question; }
	}

	public final QuestionContext question() throws RecognitionException {
		QuestionContext _localctx = new QuestionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_question);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(90);
			match(T__4);
			setState(99);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__1) | (1L << T__4) | (1L << T__5) | (1L << T__6) | (1L << T__7) | (1L << T__9) | (1L << T__10) | (1L << T__11) | (1L << T__12) | (1L << T__13) | (1L << T__14) | (1L << T__15) | (1L << T__18) | (1L << T__27) | (1L << T__28) | (1L << T__29) | (1L << ID) | (1L << String) | (1L << Int) | (1L << Double))) != 0)) {
				{
				setState(91);
				expr();
				setState(92);
				match(T__2);
				setState(93);
				expr();
				setState(94);
				match(T__2);
				setState(95);
				expr();
				setState(96);
				match(T__2);
				setState(97);
				expr();
				}
			}

			setState(101);
			match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TextContext extends ParserRuleContext {
		public TextContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_text; }
	 
		public TextContext() { }
		public void copyFrom(TextContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class TextExprContext extends TextContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TextExprContext(TextContext ctx) { copyFrom(ctx); }
	}
	public static class TextStringContext extends TextContext {
		public TerminalNode String() { return getToken(QuizzParser.String, 0); }
		public TextStringContext(TextContext ctx) { copyFrom(ctx); }
	}

	public final TextContext text() throws RecognitionException {
		TextContext _localctx = new TextContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_text);
		try {
			setState(108);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case String:
				_localctx = new TextStringContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(103);
				match(String);
				}
				break;
			case T__5:
				_localctx = new TextExprContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(104);
				match(T__5);
				setState(105);
				expr();
				setState(106);
				match(T__3);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NumberContext extends ParserRuleContext {
		public VType tp;
		public NumberContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_number; }
	 
		public NumberContext() { }
		public void copyFrom(NumberContext ctx) {
			super.copyFrom(ctx);
			this.tp = ctx.tp;
		}
	}
	public static class NumberValueContext extends NumberContext {
		public ValueContext value;
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public NumberValueContext(NumberContext ctx) { copyFrom(ctx); }
	}
	public static class NumberExprContext extends NumberContext {
		public ExprContext expr;
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public NumberExprContext(NumberContext ctx) { copyFrom(ctx); }
	}

	public final NumberContext number() throws RecognitionException {
		NumberContext _localctx = new NumberContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_number);
		try {
			setState(118);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case Int:
			case Double:
				_localctx = new NumberValueContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(110);
				((NumberValueContext)_localctx).value = value();
				((NumberValueContext)_localctx).tp =  ((NumberValueContext)_localctx).value.tp;
				}
				break;
			case T__6:
				_localctx = new NumberExprContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(113);
				match(T__6);
				setState(114);
				((NumberExprContext)_localctx).expr = expr();
				setState(115);
				match(T__3);
				((NumberExprContext)_localctx).tp =  ((NumberExprContext)_localctx).expr.tp;
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TableContext extends ParserRuleContext {
		public TableVType tp = new TableVType();;
		public TerminalNode VarType() { return getToken(QuizzParser.VarType, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_table; }
	}

	public final TableContext table() throws RecognitionException {
		TableContext _localctx = new TableContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_table);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(120);
			match(T__7);
			setState(125);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==VarType) {
				{
				setState(121);
				match(VarType);
				setState(123);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__2) {
					{
					setState(122);
					match(T__2);
					}
				}

				}
			}

			setState(136);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__1) | (1L << T__4) | (1L << T__5) | (1L << T__6) | (1L << T__7) | (1L << T__9) | (1L << T__10) | (1L << T__11) | (1L << T__12) | (1L << T__13) | (1L << T__14) | (1L << T__15) | (1L << T__18) | (1L << T__27) | (1L << T__28) | (1L << T__29) | (1L << ID) | (1L << String) | (1L << Int) | (1L << Double))) != 0)) {
				{
				setState(132);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(127);
						expr();
						setState(128);
						match(T__2);
						}
						} 
					}
					setState(134);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
				}
				setState(135);
				expr();
				}
			}

			setState(138);
			match(T__8);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BquestContext extends ParserRuleContext {
		public Token fname;
		public TerminalNode String() { return getToken(QuizzParser.String, 0); }
		public BquestContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bquest; }
	}

	public final BquestContext bquest() throws RecognitionException {
		BquestContext _localctx = new BquestContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_bquest);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(140);
			match(T__9);
			setState(141);
			((BquestContext)_localctx).fname = match(String);
			setState(142);
			match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ValueContext extends ParserRuleContext {
		public NumberVType tp;
		public ValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_value; }
	 
		public ValueContext() { }
		public void copyFrom(ValueContext ctx) {
			super.copyFrom(ctx);
			this.tp = ctx.tp;
		}
	}
	public static class NumDoubleContext extends ValueContext {
		public TerminalNode Double() { return getToken(QuizzParser.Double, 0); }
		public NumDoubleContext(ValueContext ctx) { copyFrom(ctx); }
	}
	public static class NumIntContext extends ValueContext {
		public TerminalNode Int() { return getToken(QuizzParser.Int, 0); }
		public NumIntContext(ValueContext ctx) { copyFrom(ctx); }
	}

	public final ValueContext value() throws RecognitionException {
		ValueContext _localctx = new ValueContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_value);
		try {
			setState(148);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case Int:
				_localctx = new NumIntContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(144);
				match(Int);
				((NumIntContext)_localctx).tp =  new IntegerVType();
				}
				break;
			case Double:
				_localctx = new NumDoubleContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(146);
				match(Double);
				((NumDoubleContext)_localctx).tp =  new DoubleVType();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public TypeVType tp;
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
	 
		public TypeContext() { }
		public void copyFrom(TypeContext ctx) {
			super.copyFrom(ctx);
			this.tp = ctx.tp;
		}
	}
	public static class MatchingContext extends TypeContext {
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public MatchingContext(TypeContext ctx) { copyFrom(ctx); }
	}
	public static class MultipleChoiceContext extends TypeContext {
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public MultipleChoiceContext(TypeContext ctx) { copyFrom(ctx); }
	}
	public static class NumericAnswerContext extends TypeContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public NumericAnswerContext(TypeContext ctx) { copyFrom(ctx); }
	}
	public static class ShortAnswerContext extends TypeContext {
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public ShortAnswerContext(TypeContext ctx) { copyFrom(ctx); }
	}
	public static class EssayContext extends TypeContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public EssayContext(TypeContext ctx) { copyFrom(ctx); }
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_type);
		int _la;
		try {
			setState(191);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__10:
				_localctx = new MultipleChoiceContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(150);
				match(T__10);
				setState(155);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__1) | (1L << T__4) | (1L << T__5) | (1L << T__6) | (1L << T__7) | (1L << T__9) | (1L << T__10) | (1L << T__11) | (1L << T__12) | (1L << T__13) | (1L << T__14) | (1L << T__15) | (1L << T__18) | (1L << T__27) | (1L << T__28) | (1L << T__29) | (1L << ID) | (1L << String) | (1L << Int) | (1L << Double))) != 0)) {
					{
					setState(151);
					expr();
					setState(152);
					match(T__2);
					setState(153);
					expr();
					}
				}

				setState(157);
				match(T__3);
				((MultipleChoiceContext)_localctx).tp =  new MultipleChoiceVType();
				}
				break;
			case T__11:
				_localctx = new MatchingContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(159);
				match(T__11);
				setState(166);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__1) | (1L << T__4) | (1L << T__5) | (1L << T__6) | (1L << T__7) | (1L << T__9) | (1L << T__10) | (1L << T__11) | (1L << T__12) | (1L << T__13) | (1L << T__14) | (1L << T__15) | (1L << T__18) | (1L << T__27) | (1L << T__28) | (1L << T__29) | (1L << ID) | (1L << String) | (1L << Int) | (1L << Double))) != 0)) {
					{
					setState(160);
					expr();
					setState(161);
					match(T__2);
					setState(162);
					expr();
					setState(163);
					match(T__2);
					setState(164);
					expr();
					}
				}

				setState(168);
				match(T__3);
				((MatchingContext)_localctx).tp =  new MatchingVType();
				}
				break;
			case T__12:
				_localctx = new ShortAnswerContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(170);
				match(T__12);
				setState(175);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__1) | (1L << T__4) | (1L << T__5) | (1L << T__6) | (1L << T__7) | (1L << T__9) | (1L << T__10) | (1L << T__11) | (1L << T__12) | (1L << T__13) | (1L << T__14) | (1L << T__15) | (1L << T__18) | (1L << T__27) | (1L << T__28) | (1L << T__29) | (1L << ID) | (1L << String) | (1L << Int) | (1L << Double))) != 0)) {
					{
					setState(171);
					expr();
					setState(172);
					match(T__2);
					setState(173);
					expr();
					}
				}
